--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,13 +1,14 @@
-img {
-  width: 500px;
-}
-body {
+div.front {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   width: 100vw;
-  height: 100vh;
+  text-align: center;
+  margin-top: 4em;
+}
+div.front img {
+  width: 500px;
 }
 h1, h2, h3, h4, li {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
