--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,25 @@
+html {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+body {
+  font-family: "Roboto Slab", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  width: 100%;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+* {
+  box-sizing: border-box;
+}
+
 div.front {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100vw;
+  width: 100%;
   text-align: center;
   margin-top: 4em;
 }
@@ -32,7 +48,9 @@ a:hover {
 .sponsors h3 {
   border-top: 1px solid #444;
   padding-top: 1em;
-  
+}
+.sponsors h3:first-of-type {
+  border-top: none;
 }
 .sponsors h3,
 .sponsors h4 {
@@ -68,11 +86,34 @@ a:hover {
   width: 100px;
 }
 
+
+.program {
+  width: 100%;
+  background-color: #ddd;
+  padding: 2em 2em;
+}
+
+.page {
+  margin-top: 4em;
+}
+.page img {
+  width: 200px;
+}
+
+
 /* Footer */
 
+footer {
+  width: 100%;
+}
 footer ul{
   color: #000;
   list-style: none;
+  background-color: #ddd;
+  padding: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
 }
 
