--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,13 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 </head>
 <body>
+<header>
+  <nav>
+    <a href="/#program">Program</a>
+    <a href="/#sponsors">Sponsors</a>
+    <a href="/about">About</a>
+    <a href="/code-of-conduct">Code of Conduct</a>
+  </nav>
+</header>
 <div class="{{ layout.type }}">
 
