--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -1,4 +1,4 @@
-<section class="sponsors">
+<section class="sponsors" id="sponsors">
 {% for sponsortype in site.data.sponsors %}
 	{% if sponsortype.sponsors %}
   	<h3>{{ sponsortype.type }} sponsors</h3>
