--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,6 +2,8 @@
 type: page
 ---
 {% include header.html %}
-<img src="assets/images/BSides_Oslo_Splash.png">
-{{ content }}
+<div class="pageContent">
+  <img src="assets/images/BSides_Oslo_Splash.png">
+  {{ content }}
+</div>
 {% include footer.html %}
