--- a/_includes/program.html
+++ b/_includes/program.html
@@ -1,6 +1,6 @@
-<div class="program"> 
+<section class="program" id="program"> 
   <h2>Program</h2>
   <p>The program will be ready soon!<br>
     The CFP is now closed. Thank you to everyone who submitted!
   </p>
-</div>
+</section>
