--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -116,7 +116,7 @@ footer ul{
 }
 
 .front section:nth-child(2n) {
-  background-color: #e5e5e5;
+  background-color: rgb(244, 244, 244);
 }
 
 footer a, footer a:hover, footer a:active{
@@ -129,7 +129,7 @@ footer li{
 }
 
 header {
-  background-color: #444;
+  background-color: rgb(54, 52, 53);
   padding: 1em;
 }
 header nav {
