Add back sponsors to menu

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
 <header>
   <nav>
     <a href="/#program">Program</a>
+    <a href="/#sponsors">Sponsors</a>
     <a href="/about">About</a>
     <a href="/code-of-conduct">Code of Conduct</a>
     <a href="https://www.letsreg.com/no/event/bsidesoslo2024#init" class="highlight">Get tickets</a>
