--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -86,12 +86,6 @@ a:hover {
   width: 100px;
 }
 
-
-.program {
-  width: 100%;
-  padding: 2em 2em;
-}
-
 .page {
   margin-top: 4em;
 }
@@ -99,6 +93,78 @@ a:hover {
   width: 200px;
 }
 
+.program {
+  width: 100%;
+  padding: 2em 2em;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.talks {
+  text-align: left;
+  margin: 0 auto;
+  display: block;
+  list-style: none;
+  max-width: 1000px;
+}
+.talks details {
+  margin-bottom: 1em;
+}
+.talks details summary {
+  font-weight: bold;
+  cursor: pointer;
+}
+details > * {
+  padding-right: .5em;
+  padding-left: 1.5em;
+}
+
+details summary {
+  list-style-type: none;
+  cursor: pointer;
+  position: relative;
+}
+
+
+details summary:before {
+  content: "";
+  fill: "#000";
+  background-image: url("data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHZpZXdCb3g9IjAgMCAyNCAyNCI+PHBhdGggZD0iTTcuNDEsOC41OEwxMiwxMy4xN0wxNi41OSw4LjU4TDE4LDEwTDEyLDE2TDYsMTBMNy40MSw4LjU4WiI+PC9wYXRoPjwvc3ZnPg==");
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-size: 1.5em 1.5em;
+  width: 1.5em;
+  height: 1.5em;
+  position: absolute;
+  top: 0;
+  left: -.3em;
+  display: inline-block;
+  transform: rotateX(0);
+  transition: all .25s ease-out;
+}
+details[open] summary:before {
+  transform: rotateX(180deg);
+}
+
+
+.speaker {
+  display: flex;
+  align-items: center;
+}
+.program .speaker img {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  margin-right: 1em;
+  flex-grow: 0;
+  flex-shrink: 0;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  border: 1px solid #777;
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+}
 
 /* Footer */
 
