Fix layout of talks

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -71,6 +71,7 @@ a:hover {
   background-position: center center;
   flex-grow: 0;
   flex-shrink: 0;
+  margin: 1em;
 }
 .sponsors .Platinum a {
   height: 150px;
