Add Binary Security and Defendable as sponsors

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -77,6 +77,10 @@ a:hover {
   height: 150px;
   width: 400px;
 }
+.sponsors .Gold a {
+  height: 120px;
+  width: 250px;
+}
 .sponsors .Silver a {
   height: 100px;
   width: 175px;
@@ -238,6 +242,10 @@ header nav a.highlight:hover {
   .sponsors .Platinum a {
     height: 120px;
     width: 300px;
+  }
+  .sponsors .Gold a {
+    height: 105px;
+    width: 200px;
   }
   .sponsors .Silver a {
     height: 90px;
