--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
 <head>
+  {%- if page.title %}
   <title>BSides Oslo 2024 - {{ page.title }}</title>
+  {%- else %}
+  <title>BSides Oslo 2024 - October 14th at Vulkan Arena</title>
+  {%- endif %}
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
   <link href='https://fonts.googleapis.com/css?family=Kaushan+Script' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
