--- a/_includes/header.html
+++ b/_includes/header.html
@@ -19,6 +19,7 @@
   <nav>
     <a href="/#program">Program</a>
     <a href="/#sponsors">Sponsors</a>
+    <a href="/#venue">Venue</a>
     <a href="/about">About</a>
     <a href="/code-of-conduct">Code of Conduct</a>
     <a href="https://www.letsreg.com/no/event/bsidesoslo2024#init" class="highlight">Get tickets</a>
