--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -187,6 +187,29 @@ details[open] summary:before {
   filter: grayscale(100%);
 }
 
+#venue {
+  width: 100%;
+}
+#venue > a{
+  display: flex;
+  width: 100%;
+  cursor:pointer
+}
+#venue a div {
+  margin: 1em;
+  height: 600px;
+  width: 800px;
+  background-size: cover;
+  background-position: center center;
+  background-repeat: no-repeat;
+  flex-shrink: 1;
+  flex-grow: 1;
+}
+#venue a div:nth-child(2) {
+  filter: grayscale(100%);
+}
+
+
 /* Footer */
 
 footer {
@@ -297,5 +320,13 @@ header nav a.highlight:hover {
     float: right;
     margin-left: 1em;
   }
-  
+  #venue a {
+    flex-direction: column;
+  }
+  #venue a div {
+    width: 400px;
+    height: 300px;
+    margin-left: 0em;
+    margin-right: 0em;
+  }
 }
